apps/tss/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tss
  namespace: tss
  labels:
    app: tss
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: tss
  template:
    metadata:
      labels:
        app: tss
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: tss
        image: ghcr.io/gothenburgbitfactory/taskchampion-sync-server:0.7.1
        # override to start the tss as not privileged user, and to use a read-only root filesystem
        command: ["/bin/taskchampion-sync-server"]
        securityContext:
          runAsUser: 1092
          runAsGroup: 100
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
          readOnlyRootFilesystem: true
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: data
          mountPath: /var/lib/taskchampion-sync-server/data
        resources:
          requests:
            memory: "128Mi"
          limits:
            memory: "512Mi"
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: tss-data
