apps/tss/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tss
  namespace: tss
spec:
  selector:
    app: tss
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  type: ClusterIP
